apollo-router/src/plugins/demand_control/snapshots/apollo_router__plugins__demand_control__test__enforce_on_execution_response.snap
---
source: apollo-router/src/plugins/demand_control/mod.rs
expression: body
---
- errors:
    - message: Query estimated cost exceeded configured maximum
      extensions:
        code: COST_ESTIMATED_TOO_EXPENSIVE
