apollo-router/src/plugins/demand_control/snapshots/apollo_router__plugins__demand_control__test__enforce_on_subgraph_request.snap
---
source: apollo-router/src/plugins/demand_control/mod.rs
expression: body
---
data: ~
errors:
  - message: query estimated cost 2 exceeded configured maximum 1
    extensions:
      cost.estimated: 2
      cost.max: 1
      code: COST_ESTIMATED_TOO_EXPENSIVE
